# spider_ros1

./: README.md
quadruped_spider/: README.md
quadruped_spider/spiderbot/: CMakeLists.txt  package.xml
quadruped_spider/spiderbot/config/: config_controllers.yaml  joint_names_spiderbot.yaml  test_controller.yaml
quadruped_spider/spiderbot/launch/: display.launch  gazebo.launch  world.launch
quadruped_spider/spiderbot/meshes/: base_link.STL  front_left_link0.STL  front_left_link1.STL  front_right_link0.STL  front_right_link1.STL  rear_left_link0.STL  rear_left_link1.STL  rear_right_link0.STL  rear_right_link1.STL
quadruped_spider/spiderbot/meshes/my_spider/: base_link.STL  r1.STL  sr1.STL
quadruped_spider/spiderbot/src/: spiderbot_fwd_kinematics.py  spiderbot_teleop.py
quadruped_spider/spiderbot/urdf/: spiderbot.csv  spiderbot.urdf  spiderbot.xacro  spiderbot_rviz.urdf  urdf.rviz  ydlidar.urdf
quadruped_spider/spiderbot/urdf/my_spider/: gazebo.xacro  spiderbot.xacro  spiderbotv8.csv  spiderbotv8.gv  spiderbotv8.urdf  spiderbotv8_.urdf  transmission.xacro
quadruped_spider/spiderbot/world/: arena.world  competition_arena.world  world1
